fixed layout issues in team section

--- a/style.css
+++ b/style.css
@@ -1,104 +1,120 @@
 body {
     font-family: 'Roboto', sans-serif;
-}
-
-h2, .btn {
+  }
+  
+  h2, h3,
+  .btn {
     font-family: 'PT Sans Narrow', sans-serif;
     text-transform: uppercase;
-}
+  }
+  h3 { font-size: 2.2rem; }
   
-.heading-wrapper {
+  .heading-wrapper {
     width: 100%;
-}
+  }
   
-.heading-wrapper p {
+  .heading-wrapper p {
     position: absolute;
     right: 0;
     top: 15px;
     font-size: 1rem;
     margin: 0;
-}
-
-.page-heading {
+  }
+  
+  .page-heading {
     font-size: 2.2rem;
-    color: #040000;
     text-transform: uppercase;
     border-bottom: 6px solid #e6e8ea;
     padding-bottom: 6px;
     margin: 0 0 16px 0;
-}
+  }
   
-.page-heading span, .btn {
+  .page-heading span,
+  .btn {
     font-weight: 600;
-}
-
-.btn {
+  }
+  
+  .btn {
     border-radius: 0;
     letter-spacing: 0.06rem;
-    padding: .6rem 1rem;
-}
+    padding: 0.6rem 1rem;
+    color: #fff;
+    background: #d60e96;
+  }
+
+  .team-list .btn {
+    width: 60%;
+  }
+
+  .btn:hover {
+    color: #fff;
+    background: #b20c7d;
+  }
   
-.chief .chief-content img {
+  .chief .chief-content img {
     width: 100%;
     display: block;
     max-width: 100%;
     height: auto;
     max-height: 340px;
-}
+  }
   
-.person-list {
+  .team-list {
     list-style-type: none;
-}
-
-@media (min-width: 768px) {
-.chief-txt {
+    margin: 0 12px;
     padding-left: 0;
-    padding-right: 0;
-}
-}
-@media (min-width: 768px) {
-.col-sm-offset-1 {
-    margin-left: 8.33333%;
-}
-}
+  }
 
-@media (max-width: 991px) and (min-width: 768px) {
-    .chief-txt h3 {
-        font-size: 1.5rem;
+  @media (min-width: 768px) {
+    .chief-txt {
+      padding-left: 0;
+      padding-right: 0;
     }
-.chief-txt p {
-    font-size: 0.9rem;
-}
-}
 
-@media (max-width: 768px) {
-.chief-content .col-sm-6, .chief-txt {
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-}
-
-@media (max-width: 767px) {
-.hidden-xs {
-    display: none !important;
-}
-}
-
-@media (max-width: 767px) {
-.chief-img {
-    margin-bottom: 2rem;
-}
-}
-
-.chief-img img {
-   width: 100%;
-}
-
-.person-list li img {
-    max-width: 150px;
-    max-height: 150px;
-}
-.person-list li img {
+    .col-sm-offset-1 {
+        margin-left: 8.33333%;
+    }    
+  }
+  
+  @media (max-width: 991px) and (min-width: 768px) {
+    .chief-txt h3 {
+      font-size: 1.5rem;
+    }
+  
+    .chief-txt p {
+      font-size: 0.9rem;
+    }
+  }
+  
+  @media (max-width: 768px) {
+  
+    .chief-content .col-sm-6,
+    .chief-txt {
+      flex: 0 0 100%;
+      max-width: 100%;
+    }
+  }
+  
+  @media (max-width: 767px) {
+    .hidden-xs {
+      display: none !important;
+    }
+  }
+  
+  @media (max-width: 767px) {
+    .chief-img {
+      margin-bottom: 2rem;
+    }
+  }
+  
+  .chief-img img {
+    width: 100%;
+    max-height: 340px;
+  }
+  
+  .team-list li img {
+    max-width: 180px;
+    max-height: 180px;
     display: inline-block;
     border: 4px solid #ebebeb;
     -webkit-border-radius: 50%;
@@ -108,22 +124,14 @@ h2, .btn {
     margin-bottom: 25px;
     height: 100%;
     object-fit: cover;
-}
-
-.person-list li {
-    box-sizing: border-box;
-    padding-top: 30px;
-}
-@media (max-width: 991px) {
-.person-list li {
-    margin-bottom: 25px;
-}
-}
-.person-list li {
+  }
+  
+  .team-list li {
     padding: 0 3px;
-}
-.col-xs-6 {
-    width: 50%;
-}
-
-
+  }
+  
+  @media (max-width: 991px) {
+    .team-list li {
+      margin-bottom: 25px;
+    }
+  }
